Add 'install ubuntu on hyper-v VM' page
Signed-off-by: Jim00000 <9379786+Jim00000@users.noreply.github.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -64,7 +64,7 @@ theme = 'mainroad'
   tags_counter = false # Enable counter for each tag in "Tags" widget
 
 [Params.widgets.social]
-  cached = false # activate cache if true
+  cached = true # activate cache if true
   github = "JIm00000"
 
 [markup]
