Add hugo-notice module
Signed-off-by: Jim00000 <9379786+Jim00000@users.noreply.github.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://jim00000.github.io/'
 languageCode = 'zh-tw'
 title = "Jim's Blogger"
-theme = 'mainroad'
+theme = ['hugo-notice', 'mainroad']
 
 [services]
   [services.disqus]
@@ -31,7 +31,7 @@ theme = 'mainroad'
   mathjaxPath = "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js" # Specify MathJax path
   mathjaxConfig = "TeX-AMS-MML_HTMLorMML" # Specify MathJax config
   googleFontsLink = "https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" # Load Google Fonts
-  customCSS = ["css/fonts.css", "css/custom.css"] # Include custom CSS files
+  customCSS = ["css/fonts.css", "css/custom.css", "css/notice.css"] # Include custom CSS files
   # customJS = ["js/custom.js"] # Include custom JS files
 
 [Params.style.vars]
