Change defaultContentLang to zh-tw
Signed-off-by: Jim00000 <9379786+Jim00000@users.noreply.github.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,7 @@
 baseURL = 'https://jim00000.github.io/'
-languageCode = 'zh-tw'
 title = "Jim's Blogger"
+languageCode = 'zh-tw'
+defaultContentLanguage = 'zh-tw'
 theme = ['hugo-notice', 'mainroad']
 
 [services]
