sidebar list set 'right'
Signed-off-by: Jim00000 <9379786+Jim00000@users.noreply.github.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -54,7 +54,7 @@ theme = ['hugo-notice', 'mainroad']
 
 [Params.sidebar]
   home = "right" # Configure layout for home page
-  list = "left"  # Configure layout for list pages
+  list = "right"  # Configure layout for list pages
   single = true # Configure layout for single pages
   # Enable widgets in given order
   widgets = ["categories", "recent", "taglist", "social"]
