use loveit theme
Signed-off-by: Jim00000 <9379786+Jim00000@users.noreply.github.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
-[submodule "themes/mainroad"]
-	path = themes/mainroad
-	url = https://github.com/vimux/mainroad.git
-[submodule "themes/hugo-notice"]
-	path = themes/hugo-notice
-	url = https://github.com/martignoni/hugo-notice.git
+[submodule "themes/LoveIt"]
+	path = themes/LoveIt
+	url = git@github.com:Jim00000/LoveIt.git
+	branch = release-blog
